--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 makecode:
-  target: 
-  platform: 
-  home_url: 
+  target: microbit
+  platform: microbit
+  home_url: https://makecode.microbit.org/
 theme: jekyll-theme-slate
 include:
   - assets
