--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,11 @@
     "files.exclude": {
         "**/pxt_modules": true,
         "**/.pxt": true
-    }
+    },
+    "cSpell.words": [
+        "BackLeftID",
+        "BackRightID",
+        "FrontLeftID",
+        "FrontRightID"
+    ]
 }
